# bw-touchid-broker

./: .gitignore  Cargo.toml  README.md
agent-skill/bw-broker-agent/: SKILL.md
agent-skill/bw-broker-agent/agents/: openai.yaml
examples/: agent_request.py  catalog.example.json
keychain/: TouchIDSecret.swift
macos/BWBrokerApp/: Package.swift
macos/BWBrokerApp/Sources/BWBrokerApp/: BWBrokerApp.swift
scripts/: build-macos-app.sh
src/: approval.rs  audit.rs  bw.rs  catalog.rs  certs.rs  cli.rs  config.rs  keychain.rs  lib.rs  main.rs  nonce.rs  server.rs  signing.rs
tests/: rust_e2e.rs
